Fri Jan 22 19:47:17 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* controller.rb, master.rb: [BUG#198]対応(try1)

Fri Jan 22 15:18:51 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* n-file-output.rb: [REQ#138], [BUG#197]対応. VF_PREFIXでクライア
	  ント指定を受け付ける

Wed Jan 20 17:40:37 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* bin/fairy-cp, local-file-input.rb: [REQ#195], [REQ#196]

Wed Jan 20 14:02:49 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* bin/fairy, lib/fairy/share/conf.rb: [BUG#193]対応
	* controller.rb: [BUG#194]対応. MPInputNewProcessorN 追加
	* test-queue.rb: パフォーマンステストスクリプト

Thu Dec 24 19:09:01 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* port.rb: [REQ#188]対応. ChunkedSizedPoolQueueを作
	 成. OnMemorySizedPoolQueueをSizedPoolQueueに改名(alias)

Tue Dec 22 17:54:15 2009  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* njob.rb, block-source.rb, conf.rb: [REQ#144]対応
	* b-each-element-mapper.rb, ntask.rb, n-each-element-mapper.rb:
	  optsまわりの最適化
	* n-mod-group-by.rb: 幾つかのパラメータをoptsで設定できるように修正


Tue Dec 22 15:47:58 2009  Keiju Ishitsuka  <keiju@ishitsuka.com>

        * bin/controller, bin/fairy, bin/master, bin/node, bin/processor,
	  fairy.rb, base-app.rb, conf.rb: [REQ#187]対応. さらに, 共通する
	  コンフィギュレーション設定を共通化した.

Tue Dec 22 15:08:47 2009  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* fairy.rb, controller.rb, processor.rb, bhere.rb, port.rb,
	  conf.rb: [REQ#186] 対応

Fri Dec 18 00:01:38 2009  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* input-iota.rb: [REQ#185], [BUG#184]対応
	* njob.rb, port.rb: [REQ#183]対応
	* file-place.rb: [BUG#184]対応

Thu Dec 17 19:08:55 2009  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* fairy.rb: [REQ#137]対応. クライアントからabortできるようにした.

Wed Dec 16 20:25:57 2009  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* mod-group-by.rb, port.rb: [BUG#182]対応
	* processor.rb: SEMIACTIVATEになる条件を変更

Mon Dec 14 23:43:22 2009  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* b-merge-group_by.rb: ちょっと
	* controller.rb: デバッグメッセージ変更