@@ -1,3 +1,7 @@
+Fri Jan 22 20:30:34 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>
+
+	* controller.rb, master.rb: [BUG#198]対応(try2)
+
 Fri Jan 22 19:47:17 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>
 
 	* controller.rb, master.rb: [BUG#198]対応(try1)
